--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -18,6 +18,7 @@
 
 <body>
   <app-root></app-root>
+  <script type="text/javascript" src="../node_modules/tw-elements/dist/js/tw-elements.umd.min.js"></script>
 </body>
 
 </html>
